--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div class="hola">
+    <a href="#">contactenos</a>
+  </div>
+  <app-header></app-header>
+  <app-menu></app-menu>
+  <div class="imgInicio">
+    <p>SUPER PRECIOS EN TUS ARTICULOS</p>
+  </div>
+  <app-footer></app-footer>
+</body>
+</html>
