add header and menu

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <div class="hola">
-    <a href="#">contactenos</a>
+    <a href="#">Contactenos</a>
+    <a href="#">Acerca de</a>
+    <a href="#">Asistencia</a>
   </div>
   <app-header></app-header>
   <app-menu></app-menu>
