--- a/src/app/components/home/menu/menu.component.html
+++ b/src/app/components/home/menu/menu.component.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <div class="menu">
-    <li><a href="#">mujer</a></li>
-    <li><a href="#">hombre</a></li>
-    <li><a href="#">niños</a></li>
+    <a href="#">todos</a>
+    <a href="#">mujer</a>
+    <a href="#">hombre</a>
+    <a href="#">niños</a>
   </div>
 
 </body>
