--- a/src/app/components/home/header/header.component.css
+++ b/src/app/components/home/header/header.component.css
@@ -4,24 +4,66 @@ body{
   padding: 0px;
 }
 
+/*Encabezado principal*/
 #header{
   display: flex;
-  height: 15vh;
-  border-style:groove;
+  height: 8vh;
+  margin-top: 30px;
+
 }
 
+/*Logo de la pagina*/
 .izquierda{
-  background-color: rgb(178, 209, 199);
-  width: 33vw;
+  width: 25vw;
 }
 
-.centro{
-  background-color: rgb(137, 208, 240);
-  width: 33vw;
+/*Barra de busqueda*/
+.barra{
+  width: 38vw;
+  position: relative;
 }
 
+input{
+  margin-left: 25%;
+  width: 70%;
+  height: 60%;
+  font-size: 20px;
+  border-radius: 10px;
+  outline: none;
+  background: transparent;
+}
+.button{
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+
+
+/*configuracion de los iconos*/
 .derecha{
-  background-color: rgb(60, 121, 242);
-  width: 35vw;
+  width: 40vw;
   display: flex;
+  justify-content:end;
+}
+
+.derecha a{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 5vh;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
+
+.text{
+  margin-left: 10px;
+
+}
+
+.icono{
+  font-size: 1.5em;
 }
