--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -5,21 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="./header.component.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <header id="header">
     <div class="izquierda">
-        <img src="logo.png" alt="Logo de mi tienda">
+        <img src="" alt="Logo de mi tienda">
     </div>
 
-    <div class="centro">
-      <p>barra de busqueda</p>
+    <div class="barra">
+      <input type="text" placeholder="Buscar....">
+      <button text="submit" class="button"></button>
+      <i class="fas fa-search"></i>
     </div>
 
     <div class="derecha">
-      <li><a href="#">login</a></li>
-      <li><a href="#">favoritos</a></li>
-      <li><a href="#">carrito</a></li>
+      <div class="icono"><i class="fas fa-user-circle"></i></div>
+      <a href="#" class="text">login</a>
+      <div class="icono"><i class="fas fa-heart"></i></div>
+      <a href="#" class="text">favoritos</a>
+      <div class="icono"><i class="fas fa-shopping-cart"></i></div>
+      <a href="#" class="text">carrito</a>
     </div>
 </header>
 </body>
