--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -6,13 +6,34 @@ html{
 .hola{
   background-color: black;
   height: 8vh;
+  height:60px;
+  display: flex;
+  justify-content:end;
 }
 
+a{
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  margin-right: 30px;
+  margin-top: 20px;
+  text-decoration: none;
+}
+
+nav a {
+  position: relative;
+  top: 10px; /* Ajusta la posición vertical */
+  left: 20px; /* Ajusta la posición horizontal */
+}
+
+
 .imgInicio{
-  border-style:groove;
-  height: 50vh;
+  height: 70vh;
   font: oblique bold 300% cursive;
   background-image:url(https://i.pinimg.com/236x/f3/3c/bc/f33cbca299fa83513a0e1b9e17ed80e3.jpg);
+}
+p{
+  margin: 0;
 }
 
 
