--- a/src/app/components/home/footer/footer.component.html
+++ b/src/app/components/home/footer/footer.component.html
@@ -10,7 +10,7 @@
       <p> siguenos</p>
     </div>
     <div class="metodosPagos">
-       <p>metodos de pago</p>
+       Aceptamos los siguientes metodos de pago
     </div>
 
   </div>
