--- a/src/app/components/home/menu/menu.component.html
+++ b/src/app/components/home/menu/menu.component.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <div class="menu">
-    <a href="#">todos</a>
-    <a href="#">mujer</a>
-    <a href="#">hombre</a>
-    <a href="#">niños</a>
+    <a href="#">Todos</a>
+    <a href="#">Hombre</a>
+    <a href="#">Mujer</a>
+    <a href="#">Niños</a>
   </div>
 
 </body>
