--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,19 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-  <div class="hola">
+  <div class="informacion">
     <a href="#">Contactenos</a>
     <a href="#">Acerca de</a>
     <a href="#">Asistencia</a>
   </div>
   <app-header></app-header>
   <app-menu></app-menu>
-  <div class="imgInicio">
-    <p>SUPER PRECIOS EN TUS ARTICULOS</p>
+
+  <div class="container">
+    <div class="texto">
+      Súper precios en tus articulos favoritos
+    </div>
   </div>
-  <app-footer></app-footer>
 </body>
 </html>
