--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -23,7 +23,7 @@
               <a href="">¿Olvidaste tu contraseña?</a>
             </div>
             <div class="registro">
-              <p>¿No tienes cuenta ? <a href="registrarse"> Resgistrate</a></p>
+              <p>¿No tienes cuenta ? <a routerLink="registrate"> Resgistrate</a></p>
             </div>
         </div>
     </form>
