--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,1 +1,25 @@
-<p>category works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div class="add-category">
+    <form class="form" method="post">
+        <h2>Agregar Categoria</h2>
+        <div class="input-group">
+            <label for="name">Categoria:</label>
+            <input type="text" id="name-category" name="name-category" required>
+        </div>
+        <div class="input-group">
+            <label for="text">Descripcion:</label>
+            <input type="text" id="text" name="description" required>
+        </div>
+        <button type="submit">Enviar</button>
+    </form>
+
+  </div>
+</body>
+</html>
