--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -24,11 +24,11 @@
 
     <div class="derecha">
       <div class="icono"><i class="fas fa-user-circle"></i></div>
-      <a href="/iniciar-sesion" class="text">login</a>
+      <a routerLink="inicio-sesion" class="text">login</a>
       <div class="icono"><i class="fas fa-heart"></i></div>
       <a href="#" class="text">favoritos</a>
       <div class="icono"><i class="fas fa-shopping-cart"></i></div>
-      <a href="#" class="text">carrito</a>
+      <a href="carrito" class="text">carrito</a>
     </div>
 </header>
 </body>
