--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -22,15 +22,15 @@
             <label for="correo-electronico">Correo electronico:</label>
             <input type="text" id="password" name="password" required>
           </div>
-         <!-- <div class="input-group">
-            <label for="">Tipo movimiento:</label>
+          <div class="input-group">
+            <label for="">Tipo Documento:</label>
             <select name="tipo_documento" id="tipo_documento">
               <option disabled selected>Tipo de documento</option>
               <option>Tarjeta de identidad</option>
               <option>Cedula de ciudadania</option>
               <option>Cedula de extranjeria</option>
             </select>
-          </div>-->
+          </div>
           <div class="input-group">
             <label for="password">Numero de documento:</label>
             <input type="number" id="password" name="password" required>
