--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,1 +1,34 @@
-<p>checkout works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>Document</title>
+</head>
+<body>
+  <table class="table table-bordered">
+    <caption>Lista de productos</caption>
+    <thead>
+      <th scope="col">Id</th>
+      <th scope="col">Precio Total</th>
+      <th scope="col">Status</th>
+      <th scope="col">Fecha</th>
+      <th scope="col">Usuario</th>
+      <th scope="col">Pago</th>
+      <th scope="col"> <button><i class="fas fa-edit"></i></button></th>
+      <th scope="col"> <button>  <i class="fas fa-trash-alt"></i></button></th>
+    </thead>
+    <tbody>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tbody>
+  </table>
+</body>
+</html>
