--- a/src/app/components/home/menu/menu.component.html
+++ b/src/app/components/home/menu/menu.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="menu">
-    <a href="#">Todos</a>
+    <a href="productos">Todos</a>
     <a href="#">Hombre</a>
     <a href="#">Mujer</a>
     <a href="#">Niños</a>
