--- a/src/app/components/product/monitor-products/monitor-products.component.html
+++ b/src/app/components/product/monitor-products/monitor-products.component.html
@@ -7,42 +7,41 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-
-  <title>Document</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>Monitoreo productos</title>
 </head>
-<body>
-    <div class="boton1"><a href="agregar-producto" id="agregarProducto"><i class="fas fa-plus"></i>Agregar producto</a></div>
-    <div class="boton2"><a href="agregar-categoria" id="agregarCategoria"><i class="fas fa-plus"></i>Agregar Categoria</a></div>
-
-
-  <div class="table">
-    <table table class="table table-bordered table-sm">
+  <body>
+    <div class="botones">
+      <button type="button" class="btn">
+        <a href="agregar-producto" id="agregarProducto"><i class="fas fa-plus"></i>Agregar producto</a>
+      </button>
+      <button type="button" class="btn">
+        <a href="agregar-categoria" id="agregarCategoria"><i class="fas fa-plus"></i>Agregar Categoria</a>
+      </button>
+    </div>
+    <table class="table table-bordered">
+      <caption>Lista de productos</caption>
       <thead>
-      <tr class="tabla">
-          <th>id producto</th>
-          <th>Nombre</th>
-          <th>Imagen</th>
-          <th>Descripcion</th>
-          <th>Categoria</th>
-          <th>Precio</th>
-          <th><button><i class="fas fa-edit"></i></button></th>
-          <th><button><i class="fas fa-trash-alt"></i></button></th>
-      </tr>
+        <th scope="col">ID</th>
+        <th scope="col">NOMBRE</th>
+        <th scope="col">IMAGEN</th>
+        <th scope="col">DESCRIPCION</th>
+        <th scope="col">TALLAS</th>
+        <th scope="col">CATEGORIA</th>
+        <th scope="col">PRECIO</th>
+        <th scope="col"> <button class="edit"><i class="fas fa-edit"></i></button></th>
+        <th scope="col"> <button class="delete"><i class="fas fa-trash-alt"></i></button></th>
       </thead>
       <tbody>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tbody>
-
-
-</table>
-
-</div>
-</body>
+    </table>
+  </body>
 </html>
