--- a/src/app/components/shoppin-cart/shoppin-cart.component.html
+++ b/src/app/components/shoppin-cart/shoppin-cart.component.html
@@ -1,21 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div class="cart">
-    <h2>Carrito de Compras</h2>
-    <ul class="cart-items">
-        <li class="item">Producto 1 - $10</li>
-        <li class="item">Producto 2 - $20</li>
-        <li class="item">Producto 3 - $15</li>
-    </ul>
-    <div class="total">
-        Total: $45
+<html>
+  <div class="carrito" id="carrito">
+    <div class="header-carrito">
+        <h2>Tu Carrito</h2>
+    </div>
+
+    <div class="carrito-items">
+        <div class="carrito-item">
+            <img src="img/boxengasse.png" width="80px" alt="">
+            <div class="carrito-item-detalles">
+                <span class="carrito-item-titulo">Box Engasse</span>
+                <div class="selector-cantidad">
+                    <i class="fa-solid fa-minus restar-cantidad"></i>
+                    <input type="text" value="1" class="carrito-item-cantidad" disabled>
+                    <i class="fa-solid fa-plus sumar-cantidad"></i>
+                </div>
+                <span class="carrito-item-precio">$15.000,00</span>
+            </div>
+           <span class="btn-eliminar">
+                <i class="fa-solid fa-trash"></i>
+           </span>
+        </div>
+        <div class="carrito-item">
+            <img src="img/skinglam.png" width="80px" alt="">
+            <div class="carrito-item-detalles">
+                <span class="carrito-item-titulo">Skin Glam</span>
+                <div class="selector-cantidad">
+                    <i class="fa-solid fa-minus restar-cantidad"></i>
+                    <input type="text" value="3" class="carrito-item-cantidad" disabled>
+                    <i class="fa-solid fa-plus sumar-cantidad"></i>
+                </div>
+                <span class="carrito-item-precio">$18.000,00</span>
+            </div>
+           <button class="btn-eliminar">
+                <i class="fa-solid fa-trash"></i>
+           </button>
+        </div>
+    </div>
+    <div class="carrito-total">
+        <div class="fila">
+            <strong>Tu Total</strong>
+            <span class="carrito-precio-total">
+                $120.000,00
+            </span>
+        </div>
+        <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
     </div>
 </div>
-</body>
 </html>
