--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,5 +21,7 @@
       Súper precios en tus articulos favoritos
     </div>
   </div>
+  <app-product></app-product>
+  <app-monitor-products></app-monitor-products>
 </body>
 </html>
