--- a/src/app/components/product/monitor-products/monitor-products.component.html
+++ b/src/app/components/product/monitor-products/monitor-products.component.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,8 +14,8 @@
 </head>
   <body>
     <div class="botones">
-      <button type="button" class="btn">
-        <a href="agregar-producto" id="agregarProducto"><i class="fas fa-plus"></i>Agregar producto</a>
+      <button type="button" class="btn" (click)="openAddProduct()">
+      <i class="fas fa-plus"></i>Agregar producto
       </button>
       <button type="button" class="btn">
         <a href="agregar-categoria" id="agregarCategoria"><i class="fas fa-plus"></i>Agregar Categoria</a>
