--- a/src/app/components/product/add-product/add-product.component.html
+++ b/src/app/components/product/add-product/add-product.component.html
@@ -6,14 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <!--<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">-->
           <div class="add-product">
             <form class="form" method="post">
                 <h2>Agregar producto</h2>
@@ -23,7 +15,7 @@
                 </div>
                 <div class="input-group">
                     <label for="image">Imagen:</label>
-                    <input type="image" id="image" name="image" required>
+                    <input type="file" id="image" name="image" required>
                 </div>
                 <div class="input-group">
                   <label for="text">Descripcion:</label>
@@ -31,10 +23,10 @@
                 </div>
                 <div class="input-group">
                   <label for="text">Categoria:</label>
-                  <select class="select-category" required name="category">
-                    <option disabled selected>Seleccione una categoria </option>
-                    <option value="cuentaCorriente" name="">Cuenta Corriente</option>
-                    <option value="cuentaAhorros" name="">Cuenta Ahorros</option>
+                  <select class="input-group" required name="category">
+                    <option disabled selected class="input-group">Seleccione una categoria </option>
+                    <option value="cuentaCorriente" name="">Tenis</option>
+                    <option value="cuentaAhorros" name="">Formal</option>
                   </select>
                 </div>
                 <div class="input-group">
@@ -45,15 +37,5 @@
             </form>
 
           </div>
-          <!--   </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
--->
-
 </body>
 </html>
