authentication function added

--- a/src/app/components/category/category.component.css
+++ b/src/app/components/category/category.component.css
@@ -14,13 +14,11 @@ h2{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .form {
   background-color: #fff;
-  height: 50vh;
-  width: 50vh;
+  width:auto;
   padding: 70px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
