--- a/src/app/components/product/monitor-products/monitor-products.component.html
+++ b/src/app/components/product/monitor-products/monitor-products.component.html
@@ -17,8 +17,8 @@
       <button type="button" class="btn" (click)="openAddProduct()">
       <i class="fas fa-plus"></i>Agregar producto
       </button>
-      <button type="button" class="btn">
-        <a href="agregar-categoria" id="agregarCategoria"><i class="fas fa-plus"></i>Agregar Categoria</a>
+      <button type="button" class="btn" (click)="openCategory()">
+      <i class="fas fa-plus"></i>Agregar Categoria
       </button>
     </div>
     <table class="table table-bordered">
