--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -17,7 +17,7 @@
             <label for="text">Descripcion:</label>
             <input type="text" id="text" name="description" required>
         </div>
-        <button type="submit">Enviar</button>
+        <button type="submit">Guardar</button>
     </form>
 
   </div>
