funcionalidades de cruds agregadas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,6 +21,6 @@
       Súper precios en tus articulos favoritos
     </div>
   </div>
-  <app-product></app-product>
+ <app-monitor-products></app-monitor-products>
 </body>
 </html>
