--- a/src/app/components/product/add-product/add-product.component.html
+++ b/src/app/components/product/add-product/add-product.component.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="add-product">
-      <form [formGroup]="productForm" (ngSubmit)="addProduct()" class="form" method="post">
+      <form [formGroup]="productForm" (ngSubmit)="addProduct()" class="form" >
         <h2>Agregar producto</h2>
         <div class="input-group">
           <label for="name">Nombre:</label>
