--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,41 @@
-<p>user works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <table class="table table-bordered">
+    <thead>
+      <th scope="col">Id</th>
+      <th scope="col">Direccion</th>
+      <th scope="col">Documento</th>
+      <th scope="col">Correo</th>
+      <th scope="col">Apellido</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Nombre de usuario</th>
+      <th scope="col">Tipo de documento</th>
+      <th scope="col">Movimientos</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of listUser">
+        <td>{{user.id}}</td>
+        <td>{{user.address}}</td>
+        <td>{{user.document}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.lastName}}</td>
+        <td>{{user.name}}</td>
+        <td>{{user.password}}</td>
+        <td>{{user.userName}}</td>
+        <td>{{user.document_type}}</td>
+        <td scope="col">
+          <button class="edit" (click)="deleteUser(user.document)"><i class="fas fa-edit"></i></button>
+          <button class="delete"><i class="fas fa-trash-alt"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+</body>
+</html>
