--- a/src/app/components/home/footer/footer.component.html
+++ b/src/app/components/home/footer/footer.component.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <div id="footer">
-    <div class="contactos">
-      <p> siguenos</p>
-    </div>
-    <div class="metodosPagos">
-       Aceptamos los siguientes metodos de pago
-    </div>
-
+<div id="footer">
+  <div class="contactos">
+    <p> siguenos</p>
+  </div>
+  <div class="metodosPagos">
+    Aceptamos los siguientes metodos de pago
+  </div>
+  <div class="informacion">
+    <a href="#">Contactenos</a>
+    <a href="#">Acerca de</a>
+    <a href="#">Asistencia</a>
   </div>
 
-</body>
-</html>
+</div>
