--- a/src/app/components/home/menu/menu.component.css
+++ b/src/app/components/home/menu/menu.component.css
@@ -1,18 +1,22 @@
 
 .menu{
-  height:60px;
+  height: 10vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   background-color: rgb(237, 228, 97);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a{
   display: flex;
-  margin-right: 5vh;
   text-decoration: none;
   color: black;
   font-size: 25px;
-  margin-top: 15px;
+  margin-left: 2em;
+  font-weight: 500;
 }
 
 
