--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -7,15 +7,15 @@
 </head>
 <body>
   <div class="login-container">
-    <form (ngSubmit)="login()" class="login-form">
+    <form class="login-form" [formGroup]="loginForm" (ngSubmit)="login()">
         <h2>Iniciar sesion</h2>
         <div class="input-group">
-            <label for="username">Correo electronico:</label>
-            <input type="text" id="username"  [(ngModel)]="credentials.email"  name="username" required>
+            <label for="username">Usuario</label>
+            <input type="text" id="username" name="username" required formControlName="username">
         </div>
         <div class="input-group">
             <label for="password">Contraseña:</label>
-            <input type="password" id="password" [(ngModel)]="credentials.password"      name="password" required>
+            <input type="password" id="password" name="password" required formControlName="password">
         </div>
         <button type="submit">Ingresar</button>
         <div class="enlaces">
