--- a/src/app/components/home/header/header.component.css
+++ b/src/app/components/home/header/header.component.css
@@ -1,84 +1,61 @@
-
-body{
-  margin: 0px;
-  padding: 0px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 /*Encabezado principal*/
-#header{
+#header {
   display: flex;
-  height: 8%;
-  margin-top: 30px;
-
-}
-
-/*Logo de la pagina*/
-.izquierda{
-  width: 35%;
-  margin-bottom: 1%;
-}
-
-h1{
-  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: 6vh;
-  margin: 0 0 0 20%;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  height: 10vh;
+  width: 100vw;
 }
 
-/*Barra de busqueda*/
-.barra{
-  width: 35%;
-  position: relative;
-}
-
-input{
-  margin-left: 15%;
-  padding-right:5%;
-  padding-left:5%;
-  height: 65%;
-  width: 50%;
-  font-size: 1em;
-  border-radius: 10px;
-  outline: none;
-  background: transparent;
-}
-
-.button{
-  right: 100%;
-  top: 30%;
-  left: 45vh;
-  padding: 0;
-  position: absolute;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-
-
-/*configuracion de los iconos*/
-.derecha{
-  width: 30%;
+.container {
+  width: 25vw;
+  height: 10vh;
   display: flex;
-  justify-content:flex-end;
+  justify-content: center;
+  align-items: center;
 }
 
-.derecha a{
+.search {
+  border: 2px solid black;
+  height: 50%;
+}
+
+.search .input {
+  height: 50%;
+  width: 85%;
+  font-size: 1em;
+  border-radius: 0;
+  outline: none;
+  padding-left: 1em;
+  border: none;
+}
+
+.search .button {
+  cursor: pointer;
+  border: none;
+  width: 15%;
+  height: 50%;
+  background: none;
+}
+
+.c-c {
+  width: 24vw;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.c-c a {
   display: flex;
   justify-content: space-between;
   margin-right: 5%;
   text-decoration: none;
   color: black;
-  font-size: 20px;
-}
-
-.text{
-  margin-left:2%;
-
-}
-
-.icono{
-  font-size: 1.5em;
+  font-size: 1em;
 }
