--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -1,18 +1,10 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans";
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Titillium+Web:wght@200;300;400;600;700&display=swap");
 
-header h1 {
-  text-align: center;
-  font-size: 35px;
-  /* background-color: #000; */
-  color: #fff;
-  padding: 30px 0;
-}
 .contenedor {
   max-width: 98%;
   display: flex;
@@ -25,10 +17,9 @@ header h1 {
 }
 
 .contenedor h1 {
-  text-align: left;
   width: 100%;
-  margin-left: 2em;
 }
+
 /* SECCION CONTENEDOR DE ITEMS */
 .contenedor .contenedor-items {
   margin-top: 30px;
@@ -41,6 +32,7 @@ header h1 {
   height: auto;
   transition: 0.3s;
 }
+
 .contenedor .contenedor-items .item {
   width: 14vw;
   height: 20wh;
@@ -59,20 +51,18 @@ header h1 {
   padding: .8rem;
 
 }
+
 .contenedor .contenedor-items .item .img-item {
   width: 100%;
 }
 
-.contenedor .contenedor-items .item:hover {
-  box-shadow: 0 0 10px #666;
-  scale: 1.05;
-}
 .contenedor .contenedor-items .item .titulo-item {
   display: block;
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
 }
+
 .contenedor .contenedor-items .item .precio-item {
   display: block;
   text-align: center;
@@ -90,134 +80,86 @@ header h1 {
   border-radius: 5px;
   cursor: pointer;
 }
-/* seccion carrito */
-.carrito {
-  border: 1px solid #666;
-  width: 35%;
-  margin-top: 30px;
-  border-radius: 10px;
-  overflow: hidden;
-  margin-bottom: auto;
-  position: sticky !important;
-  top: 0;
-  transition: 0.3s;
-  /* Estilos para ocultar */
-  margin-right: -100%;
-  opacity: 0;
-}
-.carrito .header-carrito {
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 30px 0;
-}
-.carrito .carrito-item {
-  display: flex;
-  align-items: center;
-  /* justify-content: space-between; */
-  position: relative;
-  border-bottom: 1px solid #666;
-  padding: 20px;
-}
-.carrito .carrito-item img {
-  margin-right: 20px;
-}
-.carrito .carrito-item .carrito-item-titulo {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-}
-.carrito .carrito-item .selector-cantidad {
-  display: inline-block;
-  margin-right: 25px;
-}
-.carrito .carrito-item .carrito-item-cantidad {
-  border: none;
-  font-size: 18px;
-  background-color: transparent;
-  display: inline-block;
-  width: 30px;
-  padding: 5px;
-  text-align: center;
-}
-.carrito .carrito-item .selector-cantidad i {
-  font-size: 18px;
-  width: 32px;
-  height: 32px;
-  line-height: 32px;
-  text-align: center;
-  border-radius: 50%;
-  border: 1px solid #000;
-  cursor: pointer;
-}
-.carrito .carrito-item .carrito-item-precio {
-  font-weight: bold;
-  display: inline-block;
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-.carrito .carrito-item .btn-eliminar {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  color: #000;
-  font-size: 20px;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  border-radius: 50%;
-  border: 1px solid #000;
-  cursor: pointer;
-  display: block;
-  background: transparent;
-  z-index: 20;
-}
-.carrito .carrito-item .btn-eliminar i {
-  pointer-events: none;
+
+/* Table */
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.carrito-total {
-  background-color: #f3f3f3;
-  padding: 30px;
-}
-.carrito-total .fila {
+.container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  font-size: 22px;
-  font-weight: bold;
-  margin-bottom: 10px;
+  flex-direction: column;
+  width: 80vw;
+  height: 90vh;
 }
-.carrito-total .btn-pagar {
-  display: block;
+
+.titulo {
+  margin: 1.1em 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center; 
+  width: 90%;
+}
+
+h1 {
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
+  font-size: 1.8rem;
+}
+
+.menu-acciones {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 1.5em;
+}
+
+.container-table {
+  width: 90%;
+  height: 80%;
+  margin: 0 2em;
+}
+
+.table {
   width: 100%;
-  border: none;
-  background: #000;
-  color: #fff;
-  border-radius: 5px;
-  font-size: 18px;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.carrito-total .btn-pagar:hover {
-  scale: 1.05;
+  border-collapse: collapse;
+  border: .3em solid rgb(133, 29, 29);
+  font-weight: 400;
+  text-align: center;
 }
 
-/* SECCION RESPONSIVE */
-@media screen and (max-width: 850px) {
-  .contenedor {
-    display: block;
-  }
-  .contenedor-items {
-    width: 100% !important;
-  }
-  .carrito {
-    width: 100%;
-  }
+th {
+  text-transform: uppercase;
+  font-family: 'DM Sans', sans-serif;
+}
+
+
+th, td {
+  border: .3em solid black;
+  font-weight: 500;
+  height: 3.5em;
+}
+
+td .eliminar:hover {
+  cursor: pointer;
+}
+
+.eliminar {
+  width: auto;
+  height: 100%;
+  border: none;
+  font-size: 2em;
+
+}
+
+.registro-span {
+  margin-top: 1em;
+  text-align: center;
+  font-size: 3em;
+  text-transform: uppercase;
 }
