--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header">
 
   <div class="container">
-    <h1>easy</h1>
+    <h1><a href="inicio">easy</a></h1>
   </div>
 
   <div class="container search">
