--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -12,7 +12,7 @@
       <span class="category-item"></span>
       <div class="btns">
         <button class="boton-item">Comprar</button>
-        <button class="boton-item"><i class="fas fa-shopping-cart"></i></button>
+        <span class="icono"><i class="fas fa-shopping-cart">Agregar</i></span>
       </div>
     </div>
 
