--- a/src/app/components/home/header/header.component.css
+++ b/src/app/components/home/header/header.component.css
@@ -50,7 +50,7 @@
 }
 
 .c-c {
-  width: 24vw;
+  width: 25vw;
   height: 100%;
   display: flex;
   justify-content: space-around;
@@ -64,5 +64,17 @@
   text-decoration: none;
   color: black;
   font-size: 1em;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 8vh;
+  right: 16em;
+  display: none;
+  height: 8vh;
+}
+
+.login-section:hover .dropdown-menu {
+  display: block;
 }
 
