--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -10,8 +10,14 @@
   </div>
 
   <div class="container c-c">
-    <span class="icono"><i class="fas fa-user-circle"></i></span>
-    <a href="login" class="text">Login</a>
+    
+    <div class="login-section" (mouseenter)="showMenu = true" (mouseleave)="showMenu = false">
+      <a href="login" *ngIf="!flag" class="text"><span class="icono"><i class="fas fa-user-circle"></i></span> Login</a>
+      <div *ngIf="showMenu" class="dropdown-menu">
+        <a href="registro">Registrarse</a>
+      </div>
+    </div>
+    <a href="usuario" class="text" *ngIf="flag" style="color: black;"><span class="icono"><i class="fas fa-user-circle"></i></span><p>{{ user.name }} {{ user.lastName }}</p></a>
     <span class="icono"><i class="fas fa-heart"></i></span>
     <a href="#" class="text">Favoritos</a>
     <span class="icono"><i class="fas fa-shopping-cart"></i></span>
