--- a/src/app/components/shoppin-cart/shoppin-cart.component.css
+++ b/src/app/components/shoppin-cart/shoppin-cart.component.css
@@ -2,26 +2,22 @@
 *{
     margin: 0;
     padding:0;
-    font-family: 'Open Sans';
+}
+.container {
+    width: 100vw;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-header h1{
-    text-align: center;
-    font-size: 35px;
-    /* background-color: #000; */
-    color: #fff;
-    padding: 30px 0;
-}
 /* seccion carrito */
 .carrito{
     border: 1px solid #666;
     width: 35%;
-    margin-top: 30px;
     border-radius: 10px;
     overflow: hidden;
-    margin-bottom: auto;
     position: sticky !important;
-    top: 0;
     transition: .3s;
 }
 .carrito .header-carrito{
@@ -128,15 +124,3 @@ header h1{
     scale: 1.05;
 }
 
-/* SECCION RESPONSIVE */
-@media screen and (max-width: 850px) {
-    .contenedor {
-      display: block;
-    }
-    .contenedor-items{
-        width: 100% !important;
-    }
-    .carrito{
-        width: 100%;
-    }
-  }
