--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,12 +1,13 @@
+<app-header></app-header>
+
 <div class="container" *ngIf="!isAdmin">
-  <!--
+
   <div class="btns">
-    <button class="logout" (click)="logout()"
-      style="width: 200px; height: 20px; background-color: rgb(255, 255, 255);">
+    <button class="logout" (click)="logout()">
       Cerrar sesion
     </button>
   </div>
--->
+
   <div class="profile">
 
     <h1>Informacion del usuario</h1>
