--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,33 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>login</title>
-</head>
-<body>
-  <div class="login-container">
-    <form class="login-form" [formGroup]="loginForm" (ngSubmit)="login()">
-        <h2>Iniciar sesion</h2>
-        <div class="input-group">
-            <label for="username">Usuario</label>
-            <input type="text" id="username" name="username" required formControlName="username">
-        </div>
-        <div class="input-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required formControlName="password">
-        </div>
-        <button type="submit">Ingresar</button>
-        <div class="enlaces">
-            <div class="olvido">
-              <a href="">¿Olvidaste tu contraseña?</a>
-            </div>
-            <div class="registro">
-              <p>¿No tienes cuenta ? <a routerLink="registrate"> Resgistrate</a></p>
-            </div>
-        </div>
-    </form>
+<div class="login-container">
+  <form class="login-form" [formGroup]="loginForm" (ngSubmit)="login()">
+    <h2>Iniciar sesion</h2>
+    <div class="input-group">
+      <label for="username">Usuario</label>
+      <input type="text" id="username" name="username" required formControlName="username">
+    </div>
+    <div class="input-group">
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" name="password" required formControlName="password">
+    </div>
+    <button type="submit">Ingresar</button>
+    <div class="enlaces">
+      <div class="olvido">
+        <a href="">¿Olvidaste tu contraseña?</a>
+      </div>
+      <div class="registro">
+        <p>¿No tienes cuenta ? <a href="registro"> Resgistrate</a></p>
+      </div>
+    </div>
+  </form>
 
-  </div>
-</body>
-</html>
+</div>
