--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,47 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <form class="custom-form" method="post">
-    <div class="login-container">
-      <form class="login-form" method="post">
-          <h2>Registro</h2>
-          <div class="input-group">
-              <label for="nombre">Nombre:</label>
-              <input type="text" id="username" name="username" required>
-          </div>
-          <div class="input-group">
-              <label for="apellido">Apellido:</label>
-              <input type="text" id="password" name="password" required>
-          </div>
-          <div class="input-group">
-            <label for="correo-electronico">Correo electronico:</label>
-            <input type="text" id="password" name="password" required>
-          </div>
-          <div class="input-group">
-            <label for="">Tipo Documento:</label>
-            <select name="tipo_documento" id="tipo_documento">
-              <option disabled selected>Tipo de documento</option>
-              <option>Tarjeta de identidad</option>
-              <option>Cedula de ciudadania</option>
-              <option>Cedula de extranjeria</option>
-            </select>
-          </div>
-          <div class="input-group">
-            <label for="password">Numero de documento:</label>
-            <input type="number" id="password" name="password" required>
-          </div>
-          <div class="input-group">
-            <label for="password">Direccion:</label>
-            <input type="text" id="password" name="password" required>
-          </div>
-            <button type="submit">Enviar</button>
-      </form>
+<div class="login-container">
+  <div class="regresar">
+    <button class="btn"><a href="inicio">Regresar</a></button>
+  </div>
+
+  <form class="login-form" [formGroup]="signupform" (ngSubmit)="signup()">
+    <h2>Registro</h2>
+    <div class="input-group">
+      <label for="name">Nombre:</label>
+      <input type="text" id="name" name="name" required formControlName="name">
     </div>
+    <div class="input-group">
+      <label for="lastname">Apellido:</label>
+      <input type="text" id="lastname" name="lastname" required formControlName="lastname">
+    </div>
+    <div class="input-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required formControlName="email">
+      <div *ngIf="isEmailInvalidAndTouched()">
+        <span *ngIf="isEmailRequiredError()">El email es requerido.</span>
+        <span *ngIf="hasEmailAValidFormat()">El formato es invalido</span>
+      </div>
+    </div>
+    <div class="input-group">
+      <label for="">Tipo Documento:</label>
+      <select name="tipo_documento" formControlName="documentType" id="tipo_documento" formControlName="documentType">
+        <option disabled selected>Seleccionar</option>
+        <option *ngFor="let doc of documentType" [value]="doc">{{ doc }}</option>
+      </select>
+    </div>
+    <div class="input-group">
+      <label for="document">Numero de documento:</label>
+      <input type="number" id="document" name="document" required formControlName="document">
+    </div>
+    <div class="input-group">
+      <label for="address">Direccion:</label>
+      <input type="text" id="address" name="address" required formControlName="address">
+    </div>
+    <div class="input-group">
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" name="password" required formControlName="password">
+      <div *ngIf="isPasswordInvalidAndTouched()">
+        <span *ngIf="isPasswordRequiredError()">La contraseña es requerida.</span>
+        <span *ngIf="isPasswordMinLengthError()">La contraseña debe contener minimo 8 caracter</span>
+      </div>
+    </div>
+    <button type="submit" [disabled]="signupform.invalid">Enviar</button>
   </form>
-</body>
-</html>
+</div>
