--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="contenedor">
   <!-- Contenedor de elementos -->
   <div>
@@ -12,7 +13,8 @@
       <span class="category-item"></span>
       <div class="btns">
         <button class="boton-item">Comprar</button>
-        <span class="icono"><i class="fas fa-shopping-cart">Agregar</i></span>
+        <button class="boton-item" (click)="addToCarrito(product)"><span class="icono"><i class="fas fa-shopping-cart">Carrito</i></span></button>
+        <button class="boton-item" (click)="addToWishlist(product)"><span class="icono"><i class="fas fa-shopping-cart" >Favoritos</i></span></button>
       </div>
     </div>
 
