--- a/src/app/components/shoppin-cart/shoppin-cart.component.html
+++ b/src/app/components/shoppin-cart/shoppin-cart.component.html
@@ -1,49 +1,40 @@
-<html>
-  <div class="carrito" id="carrito">
-    <div class="header-carrito">
-        <h2>Tu Carrito</h2>
-    </div>
+<app-header></app-header>
+<div class="container">
+    <div class="carrito" id="carrito">
+        <div class="header-carrito">
+            <h2>Tu Carrito</h2>
+        </div>
 
-    <div class="carrito-items">
-        <div class="carrito-item">
-            <img src="img/boxengasse.png" width="80px" alt="">
-            <div class="carrito-item-detalles">
-                <span class="carrito-item-titulo">Box Engasse</span>
-                <div class="selector-cantidad">
-                    <i class="fa-solid fa-minus restar-cantidad"></i>
-                    <input type="text" value="1" class="carrito-item-cantidad" disabled>
-                    <i class="fa-solid fa-plus sumar-cantidad"></i>
+        <div class="no-item" *ngIf="!flag">
+            <h2>No hay nada.</h2>
+            <p>Agrega algo al carrito.</p>
+        </div>
+    
+        <div class="carrito-items" *ngIf="flag">
+            <div class="carrito-item" *ngFor="let product of carrito">
+                <img src="img/boxengasse.png" width="80px" alt="">
+                <div class="carrito-item-detalles">
+                    <span class="carrito-item-titulo">{{product.name}}</span>
+                    <div class="selector-cantidad">
+                        <i class="fa-solid fa-minus restar-cantidad"  (click)="reducirCantidad()"></i>
+                        <input type="text" [value]="cantidad" class="carrito-item-cantidad" disabled>
+                        <i class="fa-solid fa-plus sumar-cantidad" (click)="addCantidad()"></i>
+                    </div>
+                    <span class="carrito-item-precio">{{product.price}}</span>
                 </div>
-                <span class="carrito-item-precio">$15.000,00</span>
+                <span class="btn-eliminar">
+                    <i class="fa-solid fa-trash"></i>
+                </span>
             </div>
-           <span class="btn-eliminar">
-                <i class="fa-solid fa-trash"></i>
-           </span>
         </div>
-        <div class="carrito-item">
-            <img src="img/skinglam.png" width="80px" alt="">
-            <div class="carrito-item-detalles">
-                <span class="carrito-item-titulo">Skin Glam</span>
-                <div class="selector-cantidad">
-                    <i class="fa-solid fa-minus restar-cantidad"></i>
-                    <input type="text" value="3" class="carrito-item-cantidad" disabled>
-                    <i class="fa-solid fa-plus sumar-cantidad"></i>
-                </div>
-                <span class="carrito-item-precio">$18.000,00</span>
+        <div class="carrito-total">
+            <div class="fila">
+                <strong>Tu Total</strong>
+                <span class="carrito-precio-total">
+                   {{ total }}
+                </span>
             </div>
-           <button class="btn-eliminar">
-                <i class="fa-solid fa-trash"></i>
-           </button>
+            <button class="btn-pagar"><a href="checkout">Pagar <i class="fa-solid fa-bag-shopping"></i></a> </button>
         </div>
-    </div>
-    <div class="carrito-total">
-        <div class="fila">
-            <strong>Tu Total</strong>
-            <span class="carrito-precio-total">
-                $120.000,00
-            </span>
-        </div>
-        <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
     </div>
 </div>
-</html>
