add register method and other features

--- a/src/app/components/home/menu/menu.component.html
+++ b/src/app/components/home/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu">
   <a href="productos">Todos</a>
-  <a href="#">Hombre</a>
-  <a href="#">Mujer</a>
-  <a href="#">Niños</a>
+  <a href="#">Deportivos</a>
+  <a href="#">Casuales</a>
+  <a href="#">Elegantes</a>
 </div>
