--- a/src/app/components/shoppin-cart/shoppin-cart.component.html
+++ b/src/app/components/shoppin-cart/shoppin-cart.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+
 <div class="container">
     <div class="carrito" id="carrito">
         <div class="header-carrito">
@@ -16,9 +16,9 @@
                 <div class="carrito-item-detalles">
                     <span class="carrito-item-titulo">{{product.name}}</span>
                     <div class="selector-cantidad">
-                        <i class="fa-solid fa-minus restar-cantidad"  (click)="reducirCantidad()"></i>
-                        <input type="text" [value]="cantidad" class="carrito-item-cantidad" disabled>
-                        <i class="fa-solid fa-plus sumar-cantidad" (click)="addCantidad()"></i>
+                        <i class="fa-solid fa-minus restar-cantidad"  (click)="reducirCantidad(product)"></i>
+                        <input type="text" [value]="product?.cantidad" class="carrito-item-cantidad" disabled>
+                        <i class="fa-solid fa-plus sumar-cantidad" (click)="addCantidad(product)"></i>
                     </div>
                     <span class="carrito-item-precio">{{product.price}}</span>
                 </div>
