--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+
 
 <div class="container" *ngIf="!isAdmin">
 
@@ -22,13 +22,13 @@
   <div class="payment">
     <h1>Metodo de pago</h1>
     <div class="payment-exist" *ngIf="showPayment">
-      <p class="p">{{ payment.franchises }}</p>
-      <p class="p">{{ payment.cardNumber }}</p>
+      <p class="p">Franquicia: {{ payment.franchises }}</p>
+      <p class="p">Numero: {{ payment.cardNumber }}</p>
     </div>
 
     <div class="payment-no-exist" *ngIf="!showPayment">
       <p>Aún no tienes un metodo de pago.</p>
-      <button class="btn" (click)="signup()">Añadir</button>
+      <button class="btn" (click)="paymentCreation()">Añadir</button>
     </div>
   </div>
 
