--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="add-category">
-    <form [formGroup]="cetegoryForm" (ngSubmit)="addCategory()"  class="form" method="post">
+    <form   class="form" method="">
         <h2>Agregar Categoria</h2>
         <div class="input-group">
             <label for="name">Categoria:</label>
