--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -6,6 +6,8 @@
     <button class="logout" (click)="logout()">
       Cerrar sesion
     </button>
+    btn actualizar
+    btn cambiar contraseña
   </div>
 
   <div class="profile">
