--- a/src/app/components/auth/register/register.component.css
+++ b/src/app/components/auth/register/register.component.css
@@ -13,21 +13,18 @@ h2{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 150vh;
+  height: 100vh;
 }
 
-
-
-.login-form {
+.signup-form {
+  margin-top: 10vh;
   background-color: #fff;
   height: 75vh;
+  height: 100vh;
   width: 50vh;
   padding: 70px;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
 }
-
 .input-group {
   margin-bottom: 15px;
 }
@@ -47,7 +44,7 @@ h2{
 button {
   margin-top: 3em;
   display: flex;
- justify-content: center;
+  justify-content: center;
   width: 90%;
   margin-left: 10px;
   font-size: 15px;
@@ -70,9 +67,17 @@ button:hover {
   margin-top: 30px;
   display: flex;
 }
-
 a{
   text-decoration: none;
 }
+select {
+  width: 49vh;
+  padding: 8px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+
 
 
