--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <div class="container">
     <ul class="ul-list">
         <li><a class="a" [routerLink]="['/dashboard/productos']" routerLinkActive="activo">Productos</a></li>
