Revert "added configutations"

--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -102,7 +102,7 @@
   margin: 1.1em 0;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: center; 
   width: 90%;
 }
 
@@ -136,7 +136,6 @@ h1 {
 th {
   text-transform: uppercase;
   font-family: 'DM Sans', sans-serif;
-  background-color: rgb(237, 228, 97);
 }
 
 
@@ -146,18 +145,17 @@ th, td {
   height: 3.5em;
 }
 
-td .icono:hover {
+td .eliminar:hover {
   cursor: pointer;
 }
 
-.icono{
+.eliminar {
   width: auto;
   height: 100%;
   border: none;
   font-size: 2em;
-  margin-left: 5%;
-}
 
+}
 
 .registro-span {
   margin-top: 1em;
@@ -165,24 +163,3 @@ td .icono:hover {
   font-size: 3em;
   text-transform: uppercase;
 }
-
-.botones{
-  display: flex;
-  justify-content:flex-end;
-  margin-right: 7vw;
-}
-
-.btn{
-  display: inline-block;
-  background-color: rgb(237, 228, 97);
-  padding: 10px 20px;
-  margin: 15vh 2px 30px 40px;
-  font-size: 16px;
-  text-align: center;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  cursor: pointer;
-  border-color: none;
-}
-
-
