--- a/src/app/components/product/add-product/add-product.component.html
+++ b/src/app/components/product/add-product/add-product.component.html
@@ -1,49 +1,38 @@
-
-<div class="container">
-  <form
-    class="login-form"
-    [formGroup]="productForm"
-    (ngSubmit)="addProduct()"
-  >
-    <h2>Agregar producto</h2>
-    <div class="input-group">
-      <label for="name">Nombre:</label>
-      <input
-        type="text"
-        id="name"
-        name="name"
-        required
-        formControlName="name"
-      />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="add-product">
+      <form [formGroup]="productForm" (ngSubmit)="addProduct()" class="form" >
+        <h2>Agregar producto</h2>
+        <div class="input-group">
+          <label for="name">Nombre:</label>
+          <input type="text" id="name" name="name" required ngModel />
+        </div>
+        <div class="input-group">
+          <label for="text">Precio:</label>
+          <input type="number" id="price" name="price" required ngModel />
+        </div>
+        <div class="input-group">
+          <label for="text">Categoria:</label>
+          <select class="input-group" required name="category" ngModel>
+            <option disabled selected class="input-group">
+              Seleccione una categoria
+            </option>
+            <option value="cuentaCorriente" name="">Tenis</option>
+            <option value="cuentaAhorros" name="">Formal</option>
+          </select>
+        </div>
+        <div class="input-group">
+          <label for="image">Imagen:</label>
+          <input type="file" id="image" name="image" required ngModel />
+        </div>
+        <button type="submit">Guardar</button>
+      </form>
     </div>
-    <div class="input-group">
-      <label for="price">Precio:</label>
-      <input
-        type="text"
-        id="price"
-        name="price"
-        required
-        formControlName="price"
-      />
-    </div>
-
-    <div class="input-group">
-      <label for="">Categoria:</label>
-      <select
-        name="category"
-        formControlName="category"
-        id="category"
-      >
-        <option disabled selected>Seleccionar</option>
-        <option *ngFor="let c of category" [value]="c">
-          {{ c }}
-        </option>
-      </select>
-    </div>
-    <div class="input-group">
-      <label for="image">Imagen:</label>
-      <input type="file" id="image" name="image" required />
-    </div>
-    <button type="submit">Enviar</button>
-  </form>
-</div>
+  </body>
+</html>
